--- a/Package.nuspec
+++ b/Package.nuspec
@@ -1,20 +1,17 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Package</id>
+    <id>CalmBit.LibNoise</id>
+    <title>LibNoise.NET</title>
     <version>1.0.0</version>
-    <authors>Ethan</authors>
-    <owners>Ethan</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <authors>CalmBit</authors>
+    <owners>CalmBit</owners>
+    <licenseUrl>https://raw.githubusercontent.com/CalmBit/LibNoise/master/LICENSE.md</licenseUrl>
+    <projectUrl>https://github.com/CalmBit/LibNoise</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Package description</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
-    <copyright>Copyright 2017</copyright>
-    <tags>Tag1 Tag2</tags>
-    <dependencies>
-      <dependency id="SampleDependency" version="1.0" />
-    </dependencies>
+    <description>A C# port of libnoise (http://sourceforge.net/projects/libnoise/), a general-purpose library that generates three-dimensional coherent noise.</description>
+    <releaseNotes>Initial Setup</releaseNotes>
+    <copyright>Copyright 2013</copyright>
+    <tags>LibNoise Noise Perlin LibNoise.NET Coherent</tags>
   </metadata>
 </package>
